fixed footer links spacing.

--- a/www/css/blog.css
+++ b/www/css/blog.css
@@ -397,6 +397,9 @@ body{
 			list-style:none;
 			margin-left:0;
 		}
+		#sitemap li{
+			margin-bottom:5px;
+		}
 		#sitemap a{
 			color:#a1373b;
 			font-weight:bold;
